--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 index
+<html>
+<head><title>즐거운 학교생활</title></head>
+<body>
+  <h1>Wow</h1>
+<input type="checkbox">체크박스</br>
+<input type="text">입력해주세요.
+<input type="button" value="버튼"></br>
+</body>
+</html>
